javadoc plugin upgrade